 Bug 480956 -  HTMLDocument and some other dom objects traverse member variables even if the document is in 'nsCCUncollectableMarker::InGeneration' r+sr=peterv